# Lending-Club-End-to-End

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.streamlit  README.md  SESSION_STATE.md  docker-compose.yml  dvc.yaml  project-setup-advices.md  pyproject.toml  requirements.streamlit.txt
.dvc/: config
api/: __init__.py  config.py  dependencies.py  main.py
configs/: conformal_policy.yaml  fairness_policy.yaml  modeva_governance.yaml  mrm_policy.yaml  optimization.yaml  pd_model.yaml  pd_model_runtime_recompute.yaml
dbt_project/: dbt_project.yml  profiles.yml
docs/: DECISION_CHANGES_AND_LEARNINGS.md  DEPLOY_STREAMLIT_FREE.md  INTEGRATIONS_SETUP.md  MODEL_RISK_MANAGEMENT.md  PAPER_DEVELOPMENT_PLAYBOOK_2026.md  PROJECT_JUSTIFICATION.md  RUNBOOK.md  THESIS_SHOWCASE_PLAN_ES.md  conformal_libraries_comparison.md  conformal_prediction_README.md  conformal_prediction_quick_reference.md  conformal_prediction_research_2026.md
feature_repo/: data_sources.py  entities.py  feature_services.py  feature_store.yaml  feature_views.py
mcp_server/: config.py  server.py
models/: .gitignore  causal_policy_rule.json  conformal_policy_status.json  pd_model_contract.json
notebooks/: 01_eda_lending_club.ipynb  02_feature_engineering.ipynb  03_pd_modeling.ipynb  04_conformal_prediction.ipynb  05_time_series_forecasting.ipynb  06_survival_analysis.ipynb  07_causal_inference.ipynb  08_portfolio_optimization.ipynb  09_end_to_end_pipeline.ipynb  10_paper1_cp_robust_opt.ipynb  11_paper2_ifrs9_e2e.ipynb  12_paper3_mondrian.ipynb
reports/: .gitignore  INFORME_INTEGRAL_PROYECTO_RIESGO_CREDITO_ES.md  PHASES_0_5_EXECUTION_2026-02-18.md  baseline_2026-02-18.json  before_after_recompute_comparison.json  before_after_recompute_comparison_longrun.json  before_after_recompute_snapshot.json  conformal_alerts_tradeoff_test_2026-02-20.csv  conformal_diagnostic_grid_test_2026-02-20.csv  conformal_recovery_recompute_2026-02-20.json  consistency_audit_2026-02-20.md  guia_metricas_decision_negocio_vs_papers_2026-02-20.md  hpo_research_notes_2026-02-19.md  modeva_governance_report.html  modeva_probe_report.html  modeva_side_task_report.html  optimization_recovery_search_focused_2026-02-20.csv  project_audit_snapshot.json  storytelling_audit_2026-02-20.md  storytelling_snapshot.json
scripts/: backtest_causal_policy_oot.py  backtest_conformal_coverage.py  benchmark_conformal_variants.py  benchmark_kaggle_lendingclub.py  build_pd_model_contract.py  build_pipeline_results.py  configure_integrations.sh  end_to_end_pipeline.py  estimate_causal_effects.py  export_storytelling_snapshot.py  (+22 more)
(+162 files in other folders)
